src/test/wacc/invalid/syntaxErr/pairs/elemOfNonPair.wacc
# Trying to get the fst or snd of a non-pair.
# Thanks to Ethan Range, Fawwaz Abdullah, Robbie Buxton, and Edward Hartley

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int a = 5;
  int b = fst a;
  int c = snd (5 + 'a')
end
